[package]
name = "terma-utils"
version = "0.1.0"
edition = "2021"

# [target.'cfg(all(unix))'.dependencies]
# termios = "0.3.3"
#
# [target.'cfg(windows)'.dependencies]
# winapi = { version = "0.3.9", features = ["consoleapi", "processenv", "winbase"] }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
